                    Apache Solr - DataImportHandler Version 1.3-dev
                            Release Notes

Introduction
------------
DataImportHandler is a data import tool for Solr which makes importing data from Databases, XML files and
HTTP data sources quick and easy.


$Id$

================== Release 1.3-dev ==================

Status
------
This is the first release since DataImportHandler was added to the contrib solr distribution.
The following changes list changes since the code was introduced, not since
the first official release.


Detailed Change List
--------------------

New Features
1. SOLR-700:  Allow configurable locales through a locale attribute in fields for NumberFormatTransformer.
              (Stefan Oestreicher, shalin)

Changes in runtime behavior

Bug Fixes
1. SOLR-704:  NumberFormatTransformer can silently ignore part of the string while parsing. Now it tries to
              use the complete string for parsing. Failure to do so will result in an exception.
              (Stefan Oestreicher via shalin)

Other Changes

