@@ -1,0 +1,10 @@
+<dataConfig>
+	<dataSource  type="MockDataSource" />
+	<dataSource name="mockDs" type="TestDocBuilder2$MockDataSource2" />
+	<document>
+		<entity name="x" query="select * from x" transformer="TestDocBuilder2$MockTransformer">
+			<field column="id" />
+			<field column="desc" />
+		</entity>
+	</document>
+</dataConfig>
